--- a/APCommissions.vbproj
+++ b/APCommissions.vbproj
@@ -17,6 +17,11 @@
     <Version>1.0.0</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Prefer32Bit>false</Prefer32Bit>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <COMReference Include="AccpacCOMAPI">
       <WrapperTool>tlbimp</WrapperTool>
@@ -54,6 +59,12 @@
       <Isolated>false</Isolated>
       <EmbedInteropTypes>true</EmbedInteropTypes>
     </COMReference>
+    <COMReference Include="{06ea8868-9a33-4f38-9da7-006dfc09bc17}">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>7</VersionMinor>
+      <VersionMajor>6</VersionMajor>
+      <Guid>06ea8868-9a33-4f38-9da7-006dfc09bc17</Guid>
+    </COMReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -65,6 +76,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
     <PackageReference Include="SpreadsheetLight" Version="3.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="a4wcrInterop">
+      <HintPath>..\..\Sage\Sage300\runtime\a4wcrInterop.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
